# forge

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  ultron.md
.opencode/plans/: 2026-04-16-bugfix-nested-button-and-provider.md  2026-04-16-ui-polish.md
apps/desktop/: next.config.ts  package-lock.json  package.json
apps/desktop/app/: globals.css  layout.tsx  manifest.json  page.tsx
apps/desktop/components/: TauriGuard.tsx
apps/desktop/lib/: platform.ts  streaming.ts  tauri.ts  useMediaQuery.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.pantheon-forge/: pantheon-forge.db
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 20250101000001_init.sql  20250101000002_indexes.sql  20250101000003_fix_message_roles.sql  20250101000004_tool_executions.sql  20250101000005_project_access_grants.sql
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/credentials/: mod.rs
apps/desktop/src-tauri/src/crypto/: mod.rs
apps/desktop/src-tauri/src/ipc/: conversations.rs  credentials.rs  llm.rs  mod.rs  project_access.rs  settings.rs  tools.rs
apps/desktop/src-tauri/src/llm/: anthropic.rs  google.rs  mod.rs  openai.rs  registry.rs  types.rs
apps/desktop/src-tauri/src/storage/: mod.rs
apps/desktop/src-tauri/src/tools/: mod.rs
apps/desktop/stores/: agents.ts  chat.ts  settings.ts  (+3 more)
docs/: generate_project_brief.py  project-brief.md
docs/diagrams/: high-level-architecture.mmd  hub-spoke-delegation.mmd  tool-approval-workflow.mmd
tasks/: lessons.md  todo.md
(+18 files in other folders)
