[package]
name = "app"
version = "0.1.0"
description = "Pantheon Forge - AI Agent Platform"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async
async-trait = "0.1"

# Event streaming
futures = "0.3"
futures-util = "0.3"

# Keyring for secure credential storage
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native"] }

# Encryption
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
pbkdf2 = "0.12"
sha2 = "0.10"

# SQLite with encryption
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
